--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -10,5 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- Theme Toggle Script -->
     <script src="/js/theme-toggle.js"></script>
+    <!-- Page-specific script for texts page -->
+    <script src="/js/textsPage.js"></script>
 </body>
 </html>
