--- a/views/practice.ejs
+++ b/views/practice.ejs
@@ -51,7 +51,7 @@
     <p>Text not found or you do not have permission to practice it.</p>
 <% } %>
 
-<p><a href="/profile">Back to Profile</a></p>
+<p><a href="/texts" id="save-and-profile-link">back to my text</a></p>
 
 <%- include('partials/footer') %>
 
