--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Your Custom Stylesheet -->
+    <link rel="stylesheet" href="/css/style.css">
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Link practice-specific animations -->
@@ -60,7 +62,7 @@
                             <a class="nav-link" href="/texts">My Texts</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/add_text">Add Text</a>
+                            <a class="nav-link" href="/add_text<% if (typeof currentCategoryId !== 'undefined' && currentCategoryId) { %>?folderId=<%= currentCategoryId %><% } %>">Add Text</a>
                         </li>
                         <!-- Removed "My Files" link -->
                         <li class="nav-item">
