--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -64,6 +64,12 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/add_text<% if (typeof currentCategoryId !== 'undefined' && currentCategoryId) { %>?folderId=<%= currentCategoryId %><% } %>">Add Text</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/store">Store</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/store/shelf">My Shelf</a>
+                        </li>
                         <!-- Removed "My Files" link -->
                         <!-- Coin Counter and Logout moved to the separate right-aligned div -->
                     <% } else { %>
