--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Custom Typing Trainer</title>
+    <link rel="icon" href="/images/logo.png" type="image/png">
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,6 +19,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Link practice-specific animations -->
     <link rel="stylesheet" href="/css/practice-animations.css">
+    <!-- Link profile-specific styles -->
+    <link rel="stylesheet" href="/css/profile.css">
     <!-- Inline script to set theme ASAP and prevent FOUC -->
     <script>
       (function() {
@@ -38,7 +41,10 @@
 <body>
     <nav class="navbar navbar-expand-lg mb-4">
         <div class="container">
-            <a class="navbar-brand" href="/">Typing Trainer</a>
+            <a class="navbar-brand d-flex align-items-center" href="/">
+                <img src="/images/logo.png" alt="Typing Trainer Logo" height="30" class="me-2">
+                Typing Trainer
+            </a>
             <!-- Toggler button for small screens -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -53,6 +59,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/manual">Manual</a>
                     </li>
                     <% if (typeof currentUser !== 'undefined' && currentUser) { %>
                         <li class="nav-item">
