--- a/views/practice.ejs
+++ b/views/practice.ejs
@@ -4,7 +4,7 @@
 
 <% if (text) { %>
     <div id="text-info">
-        <p>Start typing the text below. Errors will be highlighted. Press Enter at the end of each line</p>
+        <p>Start typing the text below. Errors will be highlighted. Press Enter at the end of each line. Shift + Enter to skip a line</p>
     </div>
 
     <!-- Wrap text display and input in a Bootstrap card -->
